[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm[toml]>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect.database"
description = "A Dissect module implementing parsers for various database formats, including Berkeley DB, Microsofts Extensible Storage Engine (ESE) and SQLite3"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "COPYRIGHT"]
authors = [
  {name = "Dissect Team", email = "dissect@fox-it.com"}
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Internet :: Log Analysis",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
    "dissect.cstruct>=4,<5",
    "dissect.util>=3.24.dev1,<4",  # TODO: update on release!
]
dynamic = ["version"]

[project.urls]
homepage = "https://dissect.tools"
documentation = "https://docs.dissect.tools/en/latest/projects/dissect.database"
repository = "https://github.com/fox-it/dissect.database"

[project.optional-dependencies]
full = [
    "pycryptodome"
]
dev = [
    "dissect.database[full]",
    "dissect.cstruct>=4.0.dev,<5.0.dev",
    "dissect.util>=3.24.dev,<4.0.dev",
]

[dependency-groups]
test = [
    "pytest",
]
lint = [
    "ruff==0.13.1",
    "vermin",
    "typing_extensions",
]
build = [
    "build",
]
debug = [
    "ipdb",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "debug"},
]

[project.scripts]
dissect-ntds = "dissect.database.ese.ntds.tools:main"
dissect-ual = "dissect.database.ese.tools.ual:main"
dissect-sru = "dissect.database.ese.tools.sru:main"
dissect-certlog = "dissect.database.ese.tools.certlog:main"
dissect-rpm = "dissect.database.bsd.tools.rpm:main"
dissect-impacket = "dissect.database.ese.tools.impacket:main"

[tool.ruff]
line-length = 120
required-version = ">=0.13.1"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "ANN",
  "B",
  "C4",
  "DTZ",
  "T10",
  "FA",
  "ISC",
  "G",
  "INP",
  "PIE",
  "PYI",
  "PT",
  "Q",
  "RSE",
  "RET",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "PTH",
  "PLC",
  "TRY",
  "FLY",
  "PERF",
  "FURB",
  "RUF",
]
ignore = ["E203", "B904", "UP024", "ANN002", "ANN003", "ANN204", "ANN401", "SIM105", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/_docs/**" = ["INP001"]
"*.pyi" = ["E", "F", "PYI"]

[tool.ruff.lint.isort]
known-first-party = ["dissect.database"]
known-third-party = ["dissect"]

[tool.setuptools.packages.find]
include = ["dissect.*"]

[tool.setuptools_scm]
